// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportSet for All Pokémon > exportSet( 'abomasnow' ) 1`] = `
"Abomasnow  
Ability: Snow Warning  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Swords Dance  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'absol' ) 1`] = `
"Absol  
Ability: Pressure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'aegislash-shield' ) 1`] = `
"Aegislash  
Ability: Stance Change  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Cut  
- Tackle  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'aerodactyl' ) 1`] = `
"Aerodactyl  
Ability: Rock Head  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'aggron' ) 1`] = `
"Aggron  
Ability: Sturdy  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'alakazam' ) 1`] = `
"Alakazam  
Ability: Synchronize  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'alcremie' ) 1`] = `
"Alcremie  
Ability: Sweet Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Psychic  
- Recover  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'alolan-ninetales' ) 1`] = `
"Ninetales Alola  
Ability: Snow Cloak  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'alolan-raichu' ) 1`] = `
"Raichu Alola  
Ability: Surge Surfer  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Mega Kick  
- Body Slam  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'altaria' ) 1`] = `
"Altaria  
Ability: Natural Cure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Body Slam  
- Double Edge  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'ampharos' ) 1`] = `
"Ampharos  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'annihilape' ) 1`] = `
"Annihilape  
Ability: Vital Spirit  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'appletun' ) 1`] = `
"Appletun  
Ability: Ripen  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Hyper Beam  
- Leech Seed  
- Growth  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'araquanid' ) 1`] = `
"Araquanid  
Ability: Water Bubble  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Bite  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'arbok' ) 1`] = `
"Arbok  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Wrap  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'arcanine' ) 1`] = `
"Arcanine  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'archaludon' ) 1`] = `
"Archaludon  
Ability: Stamina  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Double Edge  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'ariados' ) 1`] = `
"Ariados  
Ability: Swarm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Pin Missile  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'armarouge' ) 1`] = `
"Armarouge  
Ability: Flash Fire  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Flamethrower  
- Hyper Beam  
- Solar Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'aromatisse' ) 1`] = `
"Aromatisse  
Ability: Healer  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Hyper Beam  
- Thunderbolt  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'audino' ) 1`] = `
"Audino  
Ability: Healer  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'aurorus' ) 1`] = `
"Aurorus  
Ability: Refrigerate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Ice Beam  
- Blizzard  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'avalugg' ) 1`] = `
"Avalugg  
Ability: Own Tempo  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'azumarill' ) 1`] = `
"Azumarill  
Ability: Thick Fat  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Body Slam  
- Double Edge  
- Sing  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'banette' ) 1`] = `
"Banette  
Ability: Insomnia  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Disable  
- Hyper Beam  
- Thunderbolt  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'barbaracle' ) 1`] = `
"Barbaracle  
Ability: Tough Claws  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Surf  
- Ice Beam  
- Blizzard  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'basculegion-female' ) 1`] = `
"Basculegion F  
Ability: Swift Swim  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thrash  
- Double Edge  
- Bite  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'basculegion-male' ) 1`] = `
"Basculegion  
Ability: Swift Swim  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thrash  
- Double Edge  
- Bite  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'bastiodon' ) 1`] = `
"Bastiodon  
Ability: Sturdy  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'beartic' ) 1`] = `
"Beartic  
Ability: Snow Cloak  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Swords Dance  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'beedrill' ) 1`] = `
"Beedrill  
Ability: Swarm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Pin Missile  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'bellibolt' ) 1`] = `
"Bellibolt  
Ability: Electromorphosis  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Thunderbolt  
- Thunder Wave  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'blastoise' ) 1`] = `
"Blastoise  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Mega Kick  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'blaziken' ) 1`] = `
"Blaziken  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'camerupt' ) 1`] = `
"Camerupt  
Ability: Magma Armor  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'castform' ) 1`] = `
"Castform  
Ability: Forecast  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Flamethrower  
- Hydro Pump  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'ceruledge' ) 1`] = `
"Ceruledge  
Ability: Flash Fire  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Disable  
- Flamethrower  
- Fire Spin  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'chandelure' ) 1`] = `
"Chandelure  
Ability: Flash Fire  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Flamethrower  
- Hyper Beam  
- Solar Beam  
- Fire Spin  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'charizard' ) 1`] = `
"Charizard  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Fly  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'chesnaught' ) 1`] = `
"Chesnaught  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Swords Dance  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'chimecho' ) 1`] = `
"Chimecho  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Wrap  
- Double Edge  
- Disable  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'clawitzer' ) 1`] = `
"Clawitzer  
Ability: Mega Launcher  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'clefable' ) 1`] = `
"Clefable  
Ability: Cute Charm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'cofagrigus' ) 1`] = `
"Cofagrigus  
Ability: Mummy  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Hyper Beam  
- Psychic  
- Night Shade  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'conkeldurr' ) 1`] = `
"Conkeldurr  
Ability: Guts  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'corviknight' ) 1`] = `
"Corviknight  
Ability: Pressure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Body Slam  
- Double Edge  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'crabominable' ) 1`] = `
"Crabominable  
Ability: Hyper Cutter  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Thunder Punch  
- Body Slam  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'decidueye' ) 1`] = `
"Decidueye  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Hyper Beam  
- Low Kick  
- Solar Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'dedenne' ) 1`] = `
"Dedenne  
Ability: Cheek Pouch  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Hyper Beam  
- Thunderbolt  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'delphox' ) 1`] = `
"Delphox  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Flamethrower  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'diggersby' ) 1`] = `
"Diggersby  
Ability: Pickup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'ditto' ) 1`] = `
"Ditto  
Ability: Limber  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Transform  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'dragalge' ) 1`] = `
"Dragalge  
Ability: Poison Point  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hydro Pump  
- Surf  
- Hyper Beam  
- Thunderbolt  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'dragapult' ) 1`] = `
"Dragapult  
Ability: Clear Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Body Slam  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'dragonite' ) 1`] = `
"Dragonite  
Ability: Inner Focus  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Whirlwind  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'drampa' ) 1`] = `
"Drampa  
Ability: Berserk  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Body Slam  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'eelektross' ) 1`] = `
"Eelektross  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Body Slam  
- Thrash  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'emboar' ) 1`] = `
"Emboar  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Body Slam  
- Thrash  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'emolga' ) 1`] = `
"Emolga  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Solar Beam  
- Thunderbolt  
- Thunder Wave  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'empoleon' ) 1`] = `
"Empoleon  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Double Edge  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'espathra' ) 1`] = `
"Espathra  
Ability: Opportunist  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Hyper Beam  
- Drill Peck  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'espeon' ) 1`] = `
"Espeon  
Ability: Synchronize  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'excadrill' ) 1`] = `
"Excadrill  
Ability: Sand Rush  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Horn Drill  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'falinks' ) 1`] = `
"Falinks  
Ability: Battle Armor  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Hyper Beam  
- Counter  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'farigiraf' ) 1`] = `
"Farigiraf  
Ability: Cud Chew  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'feraligatr' ) 1`] = `
"Feraligatr  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Swords Dance  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'flapple' ) 1`] = `
"Flapple  
Ability: Ripen  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Hyper Beam  
- Leech Seed  
- Growth  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'flareon' ) 1`] = `
"Flareon  
Ability: Flash Fire  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'floette' ) 1`] = `
"Floette  
Ability: Flower Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Petal Dance  
- Psychic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'floette-eternal' ) 1`] = `
"Floette Eternal  
Ability: Flower Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Petal Dance  
- Psychic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'florges' ) 1`] = `
"Florges  
Ability: Flower Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Petal Dance  
- Psychic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'forretress' ) 1`] = `
"Forretress  
Ability: Sturdy  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Pin Missile  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'froslass' ) 1`] = `
"Froslass  
Ability: Snow Cloak  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Body Slam  
- Bite  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'furfrou' ) 1`] = `
"Furfrou  
Ability: Fur Coat  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Double Edge  
- Bite  
- Roar  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'galarian-slowbro' ) 1`] = `
"Slowbro Galar  
Ability: Quick Draw  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Body Slam  
- Double Edge  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'galarian-slowking' ) 1`] = `
"Slowking Galar  
Ability: Curious Medicine  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'galarian-stunfisk' ) 1`] = `
"Stunfisk Galar  
Ability: Mimicry  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bind  
- Surf  
- Counter  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gallade' ) 1`] = `
"Gallade  
Ability: Steadfast  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'garbodor' ) 1`] = `
"Garbodor  
Ability: Stench  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Hyper Beam  
- Solar Beam  
- Thunderbolt  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'garchomp' ) 1`] = `
"Garchomp  
Ability: Sand Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gardevoir' ) 1`] = `
"Gardevoir  
Ability: Synchronize  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'garganacl' ) 1`] = `
"Garganacl  
Ability: Purifying Salt  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gengar' ) 1`] = `
"Gengar  
Ability: Cursed Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gholdengo' ) 1`] = `
"Gholdengo  
Ability: Good As Gold  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Surf  
- Hyper Beam  
- Low Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'glaceon' ) 1`] = `
"Glaceon  
Ability: Snow Cloak  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'glalie' ) 1`] = `
"Glalie  
Ability: Inner Focus  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Bite  
- Disable  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'glimmora' ) 1`] = `
"Glimmora  
Ability: Toxic Debris  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Toxic  
- Confuse Ray  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gliscor' ) 1`] = `
"Gliscor  
Ability: Hyper Cutter  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Pin Missile  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'golurk' ) 1`] = `
"Golurk  
Ability: Iron Fist  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Fly  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'goodra' ) 1`] = `
"Goodra  
Ability: Sap Sipper  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gourgeist-average' ) 1`] = `
"Gourgeist  
Ability: Pickup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Flamethrower  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gourgeist-large' ) 1`] = `
"Gourgeist Large  
Ability: Pickup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Flamethrower  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gourgeist-small' ) 1`] = `
"Gourgeist Small  
Ability: Pickup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Flamethrower  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gourgeist-super' ) 1`] = `
"Gourgeist Super  
Ability: Pickup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Flamethrower  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'greninja' ) 1`] = `
"Greninja  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Swords Dance  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'grimmsnarl' ) 1`] = `
"Grimmsnarl  
Ability: Prankster  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'gyarados' ) 1`] = `
"Gyarados  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hatterene' ) 1`] = `
"Hatterene  
Ability: Healer  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Hyper Beam  
- Thunder Wave  
- Psychic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hawlucha' ) 1`] = `
"Hawlucha  
Ability: Limber  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Fly  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'heliolisk' ) 1`] = `
"Heliolisk  
Ability: Dry Skin  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Mega Kick  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'heracross' ) 1`] = `
"Heracross  
Ability: Swarm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hippowdon' ) 1`] = `
"Hippowdon  
Ability: Sand Stream  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Body Slam  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-arcanine' ) 1`] = `
"Arcanine Hisui  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-avalugg' ) 1`] = `
"Avalugg Hisui  
Ability: Strong Jaw  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-decidueye' ) 1`] = `
"Decidueye Hisui  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Hyper Beam  
- Low Kick  
- Solar Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-goodra' ) 1`] = `
"Goodra Hisui  
Ability: Sap Sipper  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Body Slam  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-samurott' ) 1`] = `
"Samurott Hisui  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-typhlosion' ) 1`] = `
"Typhlosion Hisui  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hisuian-zoroark' ) 1`] = `
"Zoroark Hisui  
Ability: Illusion  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Mega Kick  
- Body Slam  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'houndoom' ) 1`] = `
"Houndoom  
Ability: Early Bird  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'houndstone' ) 1`] = `
"Houndstone  
Ability: Sand Rush  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Double Edge  
- Bite  
- Roar  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hydrapple' ) 1`] = `
"Hydrapple  
Ability: Supersweet Syrup  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Hydro Pump  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'hydreigon' ) 1`] = `
"Hydreigon  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Body Slam  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'incineroar' ) 1`] = `
"Incineroar  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'infernape' ) 1`] = `
"Infernape  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'jolteon' ) 1`] = `
"Jolteon  
Ability: Volt Absorb  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Pin Missile  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'kangaskhan' ) 1`] = `
"Kangaskhan  
Ability: Early Bird  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'kingambit' ) 1`] = `
"Kingambit  
Ability: Defiant  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Guillotine  
- Swords Dance  
- Hyper Beam  
- Low Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'kleavor' ) 1`] = `
"Kleavor  
Ability: Swarm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Hyper Beam  
- Counter  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'klefki' ) 1`] = `
"Klefki  
Ability: Prankster  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Thunder Wave  
- Psychic  
- Light Screen  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'kommo-o' ) 1`] = `
"Kommo O  
Ability: Bulletproof  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'krookodile' ) 1`] = `
"Krookodile  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Mega Kick  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'leafeon' ) 1`] = `
"Leafeon  
Ability: Leaf Guard  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'liepard' ) 1`] = `
"Liepard  
Ability: Limber  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bite  
- Hyper Beam  
- Thunder Wave  
- Quick Attack  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'lopunny' ) 1`] = `
"Lopunny  
Ability: Cute Charm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'lucario' ) 1`] = `
"Lucario  
Ability: Steadfast  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'luxray' ) 1`] = `
"Luxray  
Ability: Rivalry  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'lycanroc-dusk' ) 1`] = `
"Lycanroc Dusk  
Ability: Tough Claws  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'lycanroc-midday' ) 1`] = `
"Lycanroc  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'lycanroc-midnight' ) 1`] = `
"Lycanroc Midnight  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'machamp' ) 1`] = `
"Machamp  
Ability: Guts  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'malamar' ) 1`] = `
"Malamar  
Ability: Contrary  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Wrap  
- Disable  
- Flamethrower  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'mamoswine' ) 1`] = `
"Mamoswine  
Ability: Oblivious  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'manectric' ) 1`] = `
"Manectric  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Bite  
- Roar  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'maushold-family-of-four' ) 1`] = `
"Maushold Four  
Ability: Friend Guard  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Double Edge  
- Bite  
- Hyper Beam  
- Low Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'mawile' ) 1`] = `
"Mawile  
Ability: Hyper Cutter  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'medicham' ) 1`] = `
"Medicham  
Ability: Pure Power  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'meowscarada' ) 1`] = `
"Meowscarada  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Bite  
- Hyper Beam  
- Low Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'meowstic-female' ) 1`] = `
"Meowstic F  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Thunderbolt  
- Thunder Wave  
- Dig  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'meowstic-male' ) 1`] = `
"Meowstic  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Thunderbolt  
- Thunder Wave  
- Dig  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'metagross' ) 1`] = `
"Metagross  
Ability: Clear Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Thunder Punch  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'milotic' ) 1`] = `
"Milotic  
Ability: Marvel Scale  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Wrap  
- Double Edge  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'mimikyu-disguised' ) 1`] = `
"Mimikyu Disguised  
Ability: Disguise  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Hyper Beam  
- Thunderbolt  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'morpeko-full-belly' ) 1`] = `
"Morpeko  
Ability: Hunger Switch  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'mr-rime' ) 1`] = `
"Mr Rime  
Ability: Tangled Feet  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Mega Kick  
- Body Slam  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'mudsdale' ) 1`] = `
"Mudsdale  
Ability: Own Tempo  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Mega Kick  
- Body Slam  
- Double Edge  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'musharna' ) 1`] = `
"Musharna  
Ability: Forewarn  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Thunder Wave  
- Psychic  
- Hypnosis  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'ninetales' ) 1`] = `
"Ninetales  
Ability: Flash Fire  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'noivern' ) 1`] = `
"Noivern  
Ability: Frisk  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'oranguru' ) 1`] = `
"Oranguru  
Ability: Inner Focus  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Mega Kick  
- Body Slam  
- Hyper Beam  
- Thunderbolt  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'orthworm' ) 1`] = `
"Orthworm  
Ability: Earth Eater  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Wrap  
- Double Edge  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'overqwil' ) 1`] = `
"Overqwil  
Ability: Poison Point  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Pin Missile  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'palafin-zero' ) 1`] = `
"Palafin  
Ability: Zero To Hero  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Body Slam  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pangoro' ) 1`] = `
"Pangoro  
Ability: Iron Fist  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'passimian' ) 1`] = `
"Passimian  
Ability: Receiver  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Mega Kick  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pelipper' ) 1`] = `
"Pelipper  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fly  
- Body Slam  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pidgeot' ) 1`] = `
"Pidgeot  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Hyper Beam  
- Agility  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pikachu' ) 1`] = `
"Pikachu  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Mega Kick  
- Body Slam  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pinsir' ) 1`] = `
"Pinsir  
Ability: Hyper Cutter  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Guillotine  
- Swords Dance  
- Bind  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'politoed' ) 1`] = `
"Politoed  
Ability: Water Absorb  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Pound  
- Ice Punch  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'polteageist' ) 1`] = `
"Polteageist  
Ability: Weak Armor  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Psychic  
- Night Shade  
- Confuse Ray  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'primarina' ) 1`] = `
"Primarina  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Sing  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'pyroar-male' ) 1`] = `
"Pyroar  
Ability: Rivalry  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Roar  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'quaquaval' ) 1`] = `
"Quaquaval  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Mega Kick  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'qwilfish' ) 1`] = `
"Qwilfish  
Ability: Poison Point  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Pin Missile  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'raichu' ) 1`] = `
"Raichu  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Mega Kick  
- Body Slam  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rampardos' ) 1`] = `
"Rampardos  
Ability: Mold Breaker  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Swords Dance  
- Whirlwind  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'reuniclus' ) 1`] = `
"Reuniclus  
Ability: Overcoat  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rhyperior' ) 1`] = `
"Rhyperior  
Ability: Lightning Rod  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'roserade' ) 1`] = `
"Roserade  
Ability: Natural Cure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Pin Missile  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom' ) 1`] = `
"Rotom  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hydro Pump  
- Blizzard  
- Thunderbolt  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom-fan' ) 1`] = `
"Rotom Fan  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Shock  
- Thunderbolt  
- Thunder Wave  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom-frost' ) 1`] = `
"Rotom Frost  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Blizzard  
- Thunder Shock  
- Thunderbolt  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom-heat' ) 1`] = `
"Rotom Heat  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Shock  
- Thunderbolt  
- Thunder Wave  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom-mow' ) 1`] = `
"Rotom Mow  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Shock  
- Thunderbolt  
- Thunder Wave  
- Thunder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'rotom-wash' ) 1`] = `
"Rotom Wash  
Ability: Levitate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hydro Pump  
- Thunder Shock  
- Thunderbolt  
- Thunder Wave  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'runerigus' ) 1`] = `
"Runerigus  
Ability: Wandering Spirit  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Hyper Beam  
- Earthquake  
- Psychic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sableye' ) 1`] = `
"Sableye  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'salazzle' ) 1`] = `
"Salazzle  
Ability: Corrosion  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Disable  
- Flamethrower  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'samurott' ) 1`] = `
"Samurott  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sandaconda' ) 1`] = `
"Sandaconda  
Ability: Sand Spit  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Wrap  
- Hyper Beam  
- Earthquake  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sceptile' ) 1`] = `
"Sceptile  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thunder Punch  
- Swords Dance  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'scizor' ) 1`] = `
"Scizor  
Ability: Swarm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Hyper Beam  
- Counter  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'scolipede' ) 1`] = `
"Scolipede  
Ability: Poison Point  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Double Edge  
- Pin Missile  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'scovillain' ) 1`] = `
"Scovillain  
Ability: Chlorophyll  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bite  
- Flamethrower  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'scrafty' ) 1`] = `
"Scrafty  
Ability: Shed Skin  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'serperior' ) 1`] = `
"Serperior  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Wrap  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sharpedo' ) 1`] = `
"Sharpedo  
Ability: Rough Skin  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Thrash  
- Double Edge  
- Bite  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'simipour' ) 1`] = `
"Simipour  
Ability: Gluttony  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Bite  
- Hydro Pump  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'simisage' ) 1`] = `
"Simisage  
Ability: Gluttony  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bite  
- Hyper Beam  
- Low Kick  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'simisear' ) 1`] = `
"Simisear  
Ability: Gluttony  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Bite  
- Flamethrower  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sinistcha' ) 1`] = `
"Sinistcha  
Ability: Hospitality  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Solar Beam  
- Stun Spore  
- Night Shade  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'skarmory' ) 1`] = `
"Skarmory  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Whirlwind  
- Fly  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'skeledirge' ) 1`] = `
"Skeledirge  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Bite  
- Roar  
- Sing  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'slowbro' ) 1`] = `
"Slowbro  
Ability: Oblivious  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Body Slam  
- Double Edge  
- Disable  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'slowking' ) 1`] = `
"Slowking  
Ability: Oblivious  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'slurpuff' ) 1`] = `
"Slurpuff  
Ability: Sweet Veil  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Flamethrower  
- Surf  
- Hyper Beam  
- String Shot  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sneasler' ) 1`] = `
"Sneasler  
Ability: Pressure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Swords Dance  
- Hyper Beam  
- Low Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'snorlax' ) 1`] = `
"Snorlax  
Ability: Immunity  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'spiritomb' ) 1`] = `
"Spiritomb  
Ability: Pressure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Disable  
- Hyper Beam  
- Toxic  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'staraptor' ) 1`] = `
"Staraptor  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Double Edge  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'starmie' ) 1`] = `
"Starmie  
Ability: Illuminate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Double Edge  
- Hydro Pump  
- Surf  
- Ice Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'steelix' ) 1`] = `
"Steelix  
Ability: Rock Head  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bind  
- Body Slam  
- Double Edge  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'stunfisk' ) 1`] = `
"Stunfisk  
Ability: Static  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Bind  
- Surf  
- Counter  
- Thunderbolt  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'swampert' ) 1`] = `
"Swampert  
Ability: Torrent  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Mega Kick  
- Body Slam  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'sylveon' ) 1`] = `
"Sylveon  
Ability: Cute Charm  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'talonflame' ) 1`] = `
"Talonflame  
Ability: Flame Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Whirlwind  
- Fly  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tauros' ) 1`] = `
"Tauros  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tauros-paldea-aqua-breed' ) 1`] = `
"Tauros Paldea Aqua Breed  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tauros-paldea-blaze-breed' ) 1`] = `
"Tauros Paldea Blaze Breed  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Flamethrower  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tauros-paldea-combat-breed' ) 1`] = `
"Tauros Paldea Combat Breed  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Surf  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tinkaton' ) 1`] = `
"Tinkaton  
Ability: Mold Breaker  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Thunder Wave  
- Screech  
- Light Screen  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'torkoal' ) 1`] = `
"Torkoal  
Ability: White Smoke  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Flamethrower  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'torterra' ) 1`] = `
"Torterra  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Thrash  
- Double Edge  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'toucannon' ) 1`] = `
"Toucannon  
Ability: Keen Eye  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Fly  
- Hyper Beam  
- Drill Peck  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'toxapex' ) 1`] = `
"Toxapex  
Ability: Merciless  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Pin Missile  
- Bite  
- Hydro Pump  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'toxicroak' ) 1`] = `
"Toxicroak  
Ability: Anticipation  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Thunder Punch  
- Swords Dance  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'trevenant' ) 1`] = `
"Trevenant  
Ability: Natural Cure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Disable  
- Hyper Beam  
- Leech Seed  
- Growth  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tsareena' ) 1`] = `
"Tsareena  
Ability: Leaf Guard  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Mega Kick  
- Hyper Beam  
- Low Kick  
- Solar Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'typhlosion' ) 1`] = `
"Typhlosion  
Ability: Blaze  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Thunder Punch  
- Mega Kick  
- Body Slam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tyranitar' ) 1`] = `
"Tyranitar  
Ability: Sand Stream  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Mega Kick  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'tyrantrum' ) 1`] = `
"Tyrantrum  
Ability: Strong Jaw  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Horn Drill  
- Body Slam  
- Thrash  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'umbreon' ) 1`] = `
"Umbreon  
Ability: Synchronize  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'vanilluxe' ) 1`] = `
"Vanilluxe  
Ability: Ice Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Beam  
- Blizzard  
- Hyper Beam  
- Light Screen  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'vaporeon' ) 1`] = `
"Vaporeon  
Ability: Water Absorb  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Double Edge  
- Bite  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'venusaur' ) 1`] = `
"Venusaur  
Ability: Overgrow  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Double Edge  
- Roar  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'victreebel' ) 1`] = `
"Victreebel  
Ability: Chlorophyll  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Wrap  
- Hyper Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'vileplume' ) 1`] = `
"Vileplume  
Ability: Chlorophyll  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Body Slam  
- Hyper Beam  
- Leech Seed  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'vivillon' ) 1`] = `
"Vivillon  
Ability: Shield Dust  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Hyper Beam  
- Solar Beam  
- Poison Powder  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'volcarona' ) 1`] = `
"Volcarona  
Ability: Flame Body  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Whirlwind  
- Fly  
- Body Slam  
- Thrash  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'watchog' ) 1`] = `
"Watchog  
Ability: Illuminate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Fire Punch  
- Ice Punch  
- Thunder Punch  
- Swords Dance  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'weavile' ) 1`] = `
"Weavile  
Ability: Pressure  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Ice Punch  
- Swords Dance  
- Mega Kick  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'whimsicott' ) 1`] = `
"Whimsicott  
Ability: Prankster  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Hyper Beam  
- Leech Seed  
- Growth  
- Solar Beam  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'wyrdeer' ) 1`] = `
"Wyrdeer  
Ability: Intimidate  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Body Slam  
- Thrash  
- Double Edge  
- Bite  

"
`;

exports[`exportSet for All Pokémon > exportSet( 'zoroark' ) 1`] = `
"Zoroark  
Ability: Illusion  
EVs: 32 HP / 32 Atk / 2 Spe  
Adamant Nature  
- Swords Dance  
- Mega Kick  
- Body Slam  
- Roar  

"
`;
